--- a/02.css/index.html
+++ b/02.css/index.html
@@ -33,6 +33,12 @@
         <p>Fui estilizado pelo internal CSS</p>
         <hr>
 
+    <!-- 48 -->
+    <div class="sticky">
+        <span>Eu sou sticky</span>
+    </div>
+    <hr>
+
         <!-- 4 External -->
         <p>Fui e stilizado pelo external CSS</p>
         <hr>
@@ -168,15 +174,126 @@
     <!-- 28 - Bordas individuais -->
     <p class="border-esquerda">Borda Esquerda</p>
     <p class="border-abaixo">Borda Inferior</p>
+    <hr>
 
     <!-- 29 - Bordas arredondadas -->
     <p class="arredondadas">Bordas Arredondadas</p>
     <p class="arredondadas-2">Bordas Arredondadas</p>
+    <hr>
 
     <!-- 30 - Margem -->
     <div class="margin">Eu tenho margim</div>
     <div class="margin-2">Eu tenho margim</div>
     <div class="margin-3">Eu tenho margim</div>
+    <hr>
+
+    <!-- 31 -->
+    <div class="box-model">
+        <p>Tenho todas as propriedades do box model</p>
+    </div>
+    <hr>
+
+    <!-- 33 -->
+    <p class="text-alingned">Alinhando a esquera</p>
+
+    <div class="container-center">
+        <h3>Estamos centralizados</h3>
+        <p>Algum texto</p>
+    </div>
+    <hr>
+
+    <!-- 34 -->
+    <p class="underline">Eu tenho um underline</p>
+    <p class="line-trough">Eu tenho um line-trough</p>
+    <a href="#" class="remover-underline">Sem underline</a>
+    <hr>
+
+    <!-- 35 -->
+    <p class="upper">Caixa alta</p>
+    <p class="lower">ESTE TEXTO EM LOWER</p>
+    <hr>
+
+    <!-- 36 -->
+    <h2 class="spacing">Eu tenho um espaçamento maior</h2>
+    <hr>
+
+    <!-- 37 -->
+    <p class="serif">Serif Font</p>
+    <p class="sans-serif">Sans Serif Font</p>
+    <p class="monospace">Monospace Font</p>
+    <p class="cursive">Cursive Font</p>
+    <p class="fantasy">Fantasy Font</p>
+    <hr>
+
+    <!-- 38 -->
+    <p class="italic">Sou italíco</p>
+    <p class="oblique">Estou em oblique</p>
+    <hr>
+
+    <!-- 39 -->
+    <p class="thin">Sou fina</p>
+    <p class="bold">Estou em bold</p>
+    <p class="bolder">Estou mais forte</p>
+    <hr>
+
+    <!-- 40 -->
+    <h4 class="small">Título Pequeno</h4>
+    <h4 class="big">Título Grande</h4>
+    <hr>
+
+    <!-- 41 -->
+    <div class="inline-box">a</div>
+    <div class="inline-box">b</div>
+    <div class="inline-box">c</div>
+
+    <span class="block">Teste</span>
+    <span class="block">Teste2</span>
+    <hr>
+
+    <!-- 42 -->
+    <p class="invisible">me encontre se puder</p>
+    <hr>
+
+    <!-- 43 -->
+    <div class="static">
+        <span>Eu sou estático</span>
+    </div>
+    <hr>
+
+    <!-- 44 -->
+    <div class="relative">
+        <span>Eu sou relativo</span>
+    </div>
+    <p>Eu sou um parágrafro</p>
+    <hr>
+
+    <!-- 45 -->
+    <div class="absolute">
+        <span>Eu sou absolute</span>
+    </div>
+    <p>Eu sou um parágrafo</p>
+    <hr>
+
+    <!-- 46 -->
+    <div class="relative-container">
+        <div class="absolute-1"></div>
+        <div class="absolute-2"></div>
+    </div>
+    <hr>
+
+    <!-- 47 -->
+    <div class="fixed">
+        <span>Estou fixo</span>
+    </div>
+    <hr>
+
+    <!-- 49 -->
+    <div class="relative-container">
+        <div class="absolute-3"></div>
+        <div class="absolute-4"></div>
+        <div class="absolute-5"></div>
+    </div>
+    
     </body>
 </html>
 
