--- a/offspring/index.html
+++ b/offspring/index.html
@@ -5,10 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/style.css">
-    
+
     <title>Offspring</title>
 </head>
 <body>
-    
+    <div class="container">
+        <!-- Cabeçalho -->
+        <div class="header">
+            <h1 class="main-title">The Offspring</h1>
+            <p class="main-paragraph">Uma banda de rock formada na Califórnia</p>
+        </div>
+        <!-- Imagem de destaque -->
+        <div class="feature-image">
+            <figure>
+                <img src="img/MicrosoftTeams-image (1).png" alt="Abanda The Offspring">
+                <figcaption>Integrantes da banda</figcaption>
+            </figure>
+        </div>
+        <!-- Biografia -->
+        <div class="biography-container">
+            <p>
+                Em 1984, os adolecentes <span class="bold">Dexter Holland e Greg k</span>., que eram coleas de ginásio em Hustington Beach, resolveram formar uma banda após saírem de um concerto da banda de projeção local, Social Distortion.
+            </p>
+            <p>
+                Mais terde, Kevin "Noodles" Wasserman foi chamado para a banda pelo seu <span class="bold">infame talento de conseguir babidas alcoólicas</span> para os integrantes da banda, na época manores de idade.
+            </p>
+            <p>
+                Tocando sob o nome de Mnic Subsidal, em 1985 a banda decide trocar de nome para <span class="bold">The Offispring</span>. Seu primeiro single, "I'll Be Waiting/Blackball", foi lançado no formato vinil pela gravadora independente Black Label Records e teve tiragem de mil cópias.
+            </p>
+            <p>
+                Seu álbum de estreia, The Offspring, foi lançado pela gravadora independente Nemesis Records em 1989 e produzido por Thon Wilson, <span class="bold">vendendo três mil cópias dessa estreia de vinil.</span>
+            </p>
+        </div>
+        <!-- container de citação -->
+        <div class="quotes-container">
+            <blockquote>
+                "Vender mais 10 milhões de álbum não é a prioridade, lançar algo que nos orgulhamos é."
+            </blockquote>
+            <p>Dexter Holland</p>
+        </div>
+        <!-- Curiosidades -->
+        <div class="curiosidades-container">
+            <h2>Curiosidades da banda:</h2>
+            <ul>
+                <li>Noodles achava que a banda não seria um sucesso</li>
+                <li>O apelido de Noodles não vem do macarrão</li>
+                <li>Dexter é um <span class="bold">piloto</span> licenciado</li>
+                <li>A primeira música da banda foi originada em um passeio de carro</li>
+                <li>A banda não gosta de fazer publicidade</li>
+            </ul>
+        </div>
+        <!-- Segunda citação -->
+        <div class="quotes-container">
+            <blockquote>
+                "Chances thrown <br>
+                Nothing's free <br>
+                Longing for what esed to be <br>
+                Fragile lives, shattered dreams"
+            </blockquote>
+            <p>The offspring - The kids aren't alright</p>
+        </div>
+        <!-- Segunda imagem -->
+        <div class="img-bold">
+            <figure>
+                <img src="img/MicrosoftTeams-image.png" alt="The Offispring em um show">
+                <figcaption>Dexter Holland comandando o Offspring</figcaption>
+            </figure>
+        </div>
+        <!-- Mais inf. -->
+        <div class="moreinfo-container">
+            <h2>Mais informações</h2>
+            <p>
+                Você pode conhecer mais sobra a banda
+                <a href="http://pt.wikipedi.org/wiki/The_Offspring" target="_blank">clique aqui</a>
+            </p>
+        </div>
+    </div>
 </body>
 </html>
